--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
 body {
-    padding: 50px;
-    /* background-image: url("night_sky_background.jpg"); */
+    padding: 100px;
+    /* background-image: url("felix-mittermeier-Knwea-mLGAg-unsplash.jpg"); */
+    background-color: black;
 }
 
-h1 {
-    color:black;
+label {
+    color: white;
+    margin-bottom: 30px;
+}
+
+.title {
+    color:#FFFF;
+    font-size: 300%;
+    display: flex;
+    justify-content: center;
+}
+
+.textPadding {
+    padding: 20px;
+}
+
+.padding {
+    padding: 10px;
+}
+
+.button {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.dropdown {
+    padding: 10px;
+    width: 50%;
+    margin: 0 auto;
+}
+
+.grid {
+    padding-top: 20px;
+    padding-bottom: 30px;
+    padding-left: 60px;
+    color: white;
+}
+
+.highlight {
+    color: #FBBD08;
 }
 
 #container {
-    display: flex;
     justify-content: center;
+    background-color: #003B71;
+    display:flex;
+    padding-top: 15%;
+    height: 100%;
 }
